# SPIRA-API

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  init.py  push-image.sh  push_image.sh  pyproject.toml  requirements.txt  spira_api_flood.py  tests.mk
.github/workflows/: cd.yaml  ci.yaml
envs/: authentication.env  database.env  message_listener.env  mongo.env  simple_storage.env
src/: api.py  app.py  configuration.py  main.py  requirements.txt  settings.py
src/adapters/authentication/: authentication_adapter.py
src/adapters/database/: .cfg.example  config.cfg  mongo.py  mongo_adapter.py
src/adapters/listener/: message_listener.py
src/adapters/message_service/: nats_adapter.py
src/adapters/routers/: app.py
src/adapters/simple_storage/: minio_adapter.py
src/core/model/: constants.py  exception.py  hospital.py  inference.py  message_service.py  model.py  result.py  token.py  user.py
src/core/ports/: authentication_port.py  database_port.py  message_service_port.py  ports.py  simple_storage_port.py
src/core/services/: hospital_service.py  inference_service.py  message_listener_service.py  (+3 more)
src/data/: database.py
tests/: config.py
tests/integration_tests/: config.py  test_inference.py  test_model.py  test_result.py  test_user.py
tests/mocks/: authentication_mock.py  constants.py  minio_mock.py  mongo_mock.py  nats_mock.py
tests/system_tests/: test_models_endpoints.mak  test_users_endpoints.mak
tests/unit_tests/: config.py  test_configuration.py  test_inference.py  test_model.py  test_result.py  test_user.py
(+77 files in other folders)
